# VehicleDynamicSim

./: .clang-format  CMakeLists.txt  LICENSE  README.md
data/tracks/: nurburgring_profile.csv
data/vehicles/: gt3_spec.json
include/ApexSim/Control/: ABSController.hpp  ESCSimulator.hpp
include/ApexSim/Core/: Integrator.hpp  SystemState.hpp  Types.hpp
include/ApexSim/Dynamics/: Aerodynamics.hpp  Suspension.hpp  Vehicle14DOF.hpp
include/ApexSim/Optimization/: FitnessMetrics.hpp  GeneticAlgorithm.hpp
include/ApexSim/Tires/: ContactPatch.hpp  Pacejka.hpp
scripts/: ga_convergence.py  plot_telemetry.py
src/: main.cpp
src/Control/: ABSController.cpp  ESCSimulator.cpp
src/Core/: Integrator.cpp
src/Dynamics/: Aerodynamics.cpp  Suspension.cpp  Vehicle14DOF.cpp
src/Optimization/: FitnessMetrics.cpp  GeneticAlgorithm.cpp
tests/: test_integration.cpp  test_pacejka.cpp
